# wizproxy

./: .gitignore  LICENSE  README.md  devenv.nix  pyproject.toml  setup.cfg
catalyst/: __main__.py  aes.py  buffer.py  key_chain.py  messages.py  middleman.py  proxy.py  session.py  shard.py  stream.py
catalyst/plugin/: __init__.py  filter.py  interface.py  log.py
catalyst/proto/: __init__.py  bytes.py  dml.py  handshake.py
extra/: kinp-wireshark.lua
wizproxy/: __main__.py  session.py  shard.py
wizproxy/core/: __init__.py  parcel.py  proxy.py  shard.py
wizproxy/crypto/: __init__.py  aes.py  key_chain.py
wizproxy/plugin/: __init__.py  _filter.py  builtin.py  interface.py  log.py  scapy.py
wizproxy/proto/: __init__.py  addr.py  bytes.py  dml.py  frame.py  handshake.py
wizproxy/session/: __init__.py  impl.py
wizproxy/session/challenges/: __init__.py  client_sig.py
wizproxy/transport/: __init__.py  packet_buffer.py  stream.py
